--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 Django==4.1.7
+django-cors-headers==4.0.0
 django-filter==22.1
 django-language-field==0.0.3
 django-multiselectfield==0.1.12
