--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.6.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.1.7
 django-cors-headers==4.0.0
 django-filter==22.1
@@ -7,7 +11,19 @@ django-multiselectfield==0.1.12
 django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.5
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+packaging==23.1
 Pillow==9.4.0
 PyJWT==2.6.0
 pytz==2022.7.1
+requests==2.31.0
+ruamel.yaml==0.17.31
+ruamel.yaml.clib==0.2.7
 sqlparse==0.4.3
+uritemplate==4.1.1
+urllib3==2.0.2
